--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ripe.meetingtwitter"]
 	path = ripe.meetingtwitter
-	url = git@github.com:brodul/ripe.meetingtwitter.git
+	url = https://github.com/brodul/ripe.meetingtwitter.git
 [submodule "reveal.js"]
 	path = reveal.js
 	url = https://github.com/hakimel/reveal.js.git
